--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
         		position: absolute;
         		width: 100%;
         		height: 100%;
-        	}
-        	canvas {
         		z-index: 1;
         		display: block;
         		position: absolute;
         		transform: translate(-50%, -50%);
         		animation: heart 1.5s ease infinite;
         	}
-        	h2 {
+        	/*h2 {
         		font-family: 'Dancing Script', cursive;
         		font-size: 200%;
         		color: #EA80B0;
@@ -39,24 +37,39 @@
 				left: 50%;
 				-ms-transform: translate(-50%, -50%);
 				transform: translate(-50%, -50%);
-        	}
+        	}*/
         	button {
         		z-index: 1;
         		font-family: 'Dancing Script', cursive;
-        		font-size: 200%;
+        		font-size: 220%;
         		color: #EA80B0;
         		border: none;
-        		background-color: Transparent;
+        		background-color: transparent;
     			background-repeat:no-repeat;
     			cursor: pointer;
         		margin: 0;
 				position: absolute;
-				top: 52%;
-				left: 50%;
-				-ms-transform: translate(-50%, -50%);
+				top: 45%;
+				left: 43.65%;
+				-webkit-transform: translate(-50%, -50%);
 				transform: translate(-50%, -50%);
+        		animation: btn 1.5s ease infinite;
         	}
         	@keyframes heart {
+        		0% {
+        			transform: scale(1);
+        		}
+        		30% {
+        			transform: scale(0.8);
+        		}
+        		60% {
+        			transform: scale(1.15);
+        		}
+        		100% {
+        			transform: scale(1);
+        		}
+        	}
+        	@keyframes btn {
         		0% {
         			transform: scale(1);
         		}
@@ -77,27 +90,60 @@
 			<canvas id="pinkboard">
 			</canvas>
 		</canvas>
-		<h2>Meow ❤️ Meow</h2>
-		<video id="vid" playsinline loop>
-		    <source type="audio/mp3" src="audio/JustGiveMeaReason-PnkNateRuess.mp3"></source>
-		</video>
-		<button id="clickme" onclick="toggle()">Click me</button>
+		<!-- <h2>Meow ❤️ Meow</h2> -->
+		<button id="clickme" onclick="switchAudio()">Meow ❤️ Meow</button>
 		<script>
-			var firstPlayed = true, playing = false;
+			var audio = new Audio();
+			var count = 0;
 
-			function toggle() {
-				var video = document.getElementById("vid");
-				if(firstPlayed) {
-					video.volume = 0.4;
-					video.play();
-					firstPlayed = false;
-					playing = true;
-					return;
+			function switchAudio() {
+				audio.volume = 0.5;
+
+				if(!audio.paused) {
+					audio.pause();
+					audio.load();
 				}
 
-				playing = !playing;
-				if(playing) video.play();
-				else video.pause();
+				switch(count) {
+					case 0:
+						audio.src = "audio/JustGiveMeaReason-PnkNateRuess.mp3";
+						count = 1;
+						break;
+					case 1:
+						audio.src = "audio/AThousandYears-christinaperri.mp3";
+						count = 2;
+						break;
+					case 2:
+						audio.src = "audio/ImYours-JasonMraz.mp3";
+						count = 0;
+						break;
+				}
+
+				audio.play();
+
+				if(audio.onended == null) {
+					audio.onended = function nextAudio() {
+						audio.pause();
+						audio.load();
+						
+						switch(count) {
+							case 0:
+								audio.src = "audio/JustGiveMeaReason-PnkNateRuess.mp3";
+								count = 1;
+								break;
+							case 1:
+								audio.src = "audio/AThousandYears-christinaperri.mp3";
+								count = 2;
+								break;
+							case 2:
+								audio.src = "audio/ImYours-JasonMraz.mp3";
+								count = 0;
+								break;
+						}
+
+						audio.play();
+					};
+				}
 			}
 
 			// Settings
