--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         		transform: translate(-50%, -50%);
         		animation: heart 1.5s ease infinite;
         	}
-        	/*h2 {
+        	h2 {
         		font-family: 'Dancing Script', cursive;
         		font-size: 200%;
         		color: #EA80B0;
@@ -37,39 +37,23 @@
 				left: 50%;
 				-ms-transform: translate(-50%, -50%);
 				transform: translate(-50%, -50%);
-        	}*/
+        	}
         	button {
         		z-index: 1;
         		font-family: 'Dancing Script', cursive;
-        		font-size: 220%;
+        		font-size: 200%;
         		color: #EA80B0;
         		border: none;
         		background-color: transparent;
-    			background-repeat:no-repeat;
+    			background-repeat: no-repeat;
     			cursor: pointer;
         		margin: 0;
 				position: absolute;
-				top: 45%;
-				left: 43.65%;
-				-webkit-transform: translate(-50%, -50%);
+				top: 52%;
+				left: 50%;
 				transform: translate(-50%, -50%);
-        		animation: btn 1.5s ease infinite;
         	}
         	@keyframes heart {
-        		0% {
-        			transform: scale(1);
-        		}
-        		30% {
-        			transform: scale(0.8);
-        		}
-        		60% {
-        			transform: scale(1.15);
-        		}
-        		100% {
-        			transform: scale(1);
-        		}
-        	}
-        	@keyframes btn {
         		0% {
         			transform: scale(1);
         		}
@@ -90,8 +74,8 @@
 			<canvas id="pinkboard">
 			</canvas>
 		</canvas>
-		<!-- <h2>Meow ❤️ Meow</h2> -->
-		<button id="clickme" onclick="switchAudio()">Meow ❤️ Meow</button>
+		<h2>Meow ❤️ Meow</h2>
+		<button id="clickme" onclick="switchAudio()">Click me</button>
 		<script>
 			var audio = new Audio();
 			var count = 0;
