No button (mobile background)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         		color: #EA80B0;
         		margin: 0;
 				position: absolute;
-				top: 47%;
+				top: 48.5%;
 				left: 50%;
 				-ms-transform: translate(-50%, -50%);
 				transform: translate(-50%, -50%);
@@ -75,13 +75,13 @@
 			</canvas>
 		</canvas>
 		<h2>Meow ❤️ Meow</h2>
-		<button id="clickme" onclick="switchAudio()">Click me</button>
+		<!-- <button id="clickme" onclick="switchAudio()">Click me</button> -->
 		<script>
 			var audio = new Audio();
 			var count = 0;
 
 			function switchAudio() {
-				audio.volume = 0.5;
+				audio.volume = 0.4;
 
 				if(!audio.paused) {
 					audio.pause();
